# mongo-service

./: .gitignore  CMakeLists.txt  CMakeSettings.json  MongoServiceConfig.cmake  README.md  transaction.md
.github/workflows/: flawfinder.yml
client/julia/MongoService/: LICENSE  Project.toml  README.md
client/julia/MongoService/src/: MongoService.jl  client.jl  request.jl
client/julia/MongoService/test/: bulk.jl  crud.jl  index.jl  rename.jl  runtests.jl
client/python/: README.md  client.py  logger.py  request.py  requirements.txt
client/python/features/: bulk.feature  crud.feature  environment.py  index.feature  rename.feature  resource.feature
client/python/features/steps/: bulk.py  crud.py  index.py  rename.py  resource.py
client/rust/: Cargo.toml  README.md  build.rs
client/rust/include/: mongo-service.hpp
client/rust/src/: client.rs  lib.rs  mongo-service.cpp
client/rust/src/repository/: mod.rs
client/rust/src/repository/model/: create.rs  delete.rs  mod.rs  options.rs  update.rs
client/rust/tests/: bulk.rs  collection.rs  crud.rs  distinct.rs  index.rs  model.rs  rename.rs  repository.rs
client/rust/tests/common/: mod.rs
docker/: Dockerfile  Dockerfile.gcc  build.sh  env.sh  run.sh  stack.yml
docker/scripts/: entrypoint.sh  gdb.sh
src/: CMakeLists.txt  main.cpp
src/api/: CMakeLists.txt  api.cpp  api.h  api.hpp  contextholder.h  model.hpp  options.hpp  request.h  request.hpp
src/api/impl/: asyncconnection.cpp  asyncconnection.h  asyncconnection.hpp  connection.cpp  connection.h  connection.hpp  settings.h  settings.hpp
src/api/model/: request.hpp  response.hpp
src/api/model/request/: action.cpp  action.hpp  bulk.hpp  count.hpp  create.hpp  createtimeseries.hpp  delete.hpp  distinct.hpp  dropindex.hpp  index.hpp  pipeline.cpp  pipeline.hpp  retrieve.hpp  transaction.cpp  update.hpp
src/api/model/response/: collection.hpp  history.hpp  index.hpp  update.hpp
src/api/options/: collation.hpp  count.hpp  createcollection.hpp  delete.hpp  distinct.hpp  dropcollection.hpp  find.hpp  index.hpp  insert.hpp  options.cpp  readpreference.hpp  update.hpp  writeconcern.hpp
src/api/pool/: pool.h  pool.hpp
src/api/repository/: repository.cpp  repository.hpp  repositorywithapm.hpp
src/common/: CMakeLists.txt
src/common/util/: bson.cpp  bson.h  bson.hpp  concept.h  concept.hpp  date.cpp  date.h  defer.hpp  json.h  json.hpp  parser.h  parser.hpp  serialise.h  serialise.hpp  validate.cpp  validate.h  validate.hpp
src/common/visit_struct/: fully_visitable.hpp
src/db/: logger.cpp  logger.h  pool.cpp  pool.h  storage.cpp  storage.h  transaction.cpp
src/genoid/: CMakeLists.txt  main.cpp
src/ilp/: CMakeLists.txt  apmrecord.cpp  apmrecord.hpp  builder.cpp  builder.h  builder.hpp  ilp.cpp  ilp.h  ilp.hpp
src/log/: CMakeLists.txt  NanoLog.cpp  NanoLog.h  NanoLog.hpp  NanoLogConfig.cmake  stacktrace.cpp  stacktrace.hpp
src/model/: configuration.cpp  configuration.h  document.cpp  document.h  errors.cpp  errors.h  metric.cpp  metric.h
src/queue/: poller.cpp  poller.h  queuemanager.cpp  queuemanager.h
src/server/: server.cpp  server.h  service.cpp  session.cpp  session.h
src/service/: CMakeLists.txt  main.cpp
src/service/db/: logger.cpp  metricscollector.cpp  metricscollector.h  metricscollector.hpp  pool.cpp  pool.hpp  storage.cpp  storage.h  storage.hpp  transaction.cpp
src/service/db/internal/: create.cpp  drop.cpp  internal.cpp  internal.h  internal.hpp  rename.cpp  transaction.cpp
src/service/model/: configuration.cpp  configuration.h  document.cpp  document.h  errors.cpp  errors.hpp  metric.cpp  metric.h
src/service/queue/: poller.cpp  queuemanager.cpp  queuemanager.h
src/service/server/: service.cpp  service.h
src/shell/: CMakeLists.txt  main.cpp
src/shell/client/: client.cpp  client.hpp
src/util/: bson.cpp  bson.h  config.cpp  config.h
test/client/: CMakeLists.txt  api.cpp  client.cpp  client.h  context.h  crud.cpp  main.cpp  pool.cpp  pool.h  status.h  tasks.h  tasks.hpp
test/go/: crud.go  go.mod  main.go  mongo.go  pool.go
test/integration/: CMakeLists.txt  bulk.cpp  catch.hpp  collection.cpp  coro_io.hpp  coro_io_impl.hpp  coroclient.cpp  coroutine.cpp  crud.cpp  distinct.cpp  index.cpp  main.cpp  message.cpp  pool.cpp  pool.h  questdb.cpp  rename.cpp  repository.cpp  transaction1.cpp
test/performance/: CMakeLists.txt  crud.cpp
test/unit/: CMakeLists.txt  bson.cpp  date.cpp  document.cpp  ilp.cpp  json.cpp  main.cpp  model.h  model.hpp  nanolog.cpp  options.cpp  raw.cpp  serialise.cpp  validate.cpp
